--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ button {
 }
 </style>
 </head>
-<body background="https://i.redd.it/3orbe0koxkc41.jpg">
+<body background="https://i.ytimg.com/vi/QLdAhwSBZ3w/maxresdefault.jpg">
 <style>
   textarea {
     background-color: #000;
