--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><head>
- <title>Misspoken's Token Generator</title>
+ <title>Nabil's Token Generator</title>
  <link
    id="favicon"
     rel="icon"
@@ -8,7 +8,7 @@
   />
 <meta content="width=device-width, initial-scale=1" name="viewport">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Misspoken's Token Generator">
+<meta property="og:title" content="Nabil's Token Generator">
 <meta property="og:description" content="Generate endless unchecked tokens. (Checker coming soon!)">
 <meta property="og:url" content="http://sitesgithub.github.io/nitro/index.html">
 <meta property="og:image" content="https://media.discordapp.net/attachments/798998758867337216/805169251606462484/unknown.png?width=3000&height=3000">
@@ -35,8 +35,14 @@ button {
 }
 </style>
 </head>
-<body background="https://i.ytimg.com/vi/QLdAhwSBZ3w/maxresdefault.jpg">
 <style>
+	body {
+                   background-image: url('https://i.ytimg.com/vi/QLdAhwSBZ3w/maxresdefault.jpg');
+  		   background-repeat: no-repeat;
+  		   background-attachment: fixed;
+  		   background-size: cover;
+	     }
+	
   textarea {
     background-color: #000;
     border: 1px solid #000;
@@ -70,7 +76,7 @@ button:active {
 
 </style>
 <div>
-<h1 style="font-family: Bebas; color: #ffffff">𝙈𝙞𝙨𝙨𝙥𝙤𝙠𝙚𝙣'𝙨 𝙏𝙤𝙠𝙚𝙣 𝙂𝙚𝙣𝙚𝙧𝙖𝙩𝙤𝙧</h1>
+<h1 style="font-family: Bebas; color: #ffffff">𝙉𝙖𝙗𝙞𝙡'𝙨 𝙏𝙤𝙠𝙚𝙣 𝙂𝙚𝙣𝙚𝙧𝙖𝙩𝙤𝙧</h1>
 <textarea id="a" rows="11" cols="100" readonly="" style="resize: none;">𝘔𝘪𝘴𝘴𝘱𝘰𝘬𝘦𝘯'𝘴 𝘌𝘯𝘥𝘭𝘦𝘴𝘴 𝘛𝘰𝘬𝘦𝘯 𝘎𝘦𝘯𝘦𝘳𝘢𝘵𝘰𝘳
  
 
@@ -88,7 +94,7 @@ button:active {
   Stop
 </button>
     
-<button onclick="stop(); document.getElementById('a').value = 'Successfully reset tokens!\n\n―――――――――――――――――――――――――――――――――――――――\nYouTube : https://tinyurl.com/sarcasticbeats\nDiscord : Misspoken འҽʂ#6666\n―――――――――――――――――――――――――――――――――――――――\n\n'; document.getElementById('b').value = '';" class="button" id="clear">Reset</button>
+<button onclick="stop(); document.getElementById('a').value = 'Successfully reset tokens!\n\n―――――――――――――――――――――――――――――――――――――――\nYouTube: https://youtube.com/ItzNabil\nDiscord: nabilw0rld#8792\n―――――――――――――――――――――――――――――――――――――――\n\n'; document.getElementById('b').value = '';" class="button" id="clear">Reset</button>
 <textarea style="display: none;" id="b" rows="11" cols="100" readonly=""></textarea>
 	<script src="main.js"></script>
 </div>
