--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@ button:active {
 
 </style>
 <div>
-<h1 style="font-family: Bebas; color: #ffffff">𝙉𝙖𝙗𝙞𝙡'𝙨 𝙏𝙤𝙠𝙚𝙣 𝙂𝙚𝙣𝙚𝙧𝙖𝙩𝙤𝙧</h1>
-<textarea id="a" rows="11" cols="100" readonly="" style="resize: none;">𝘔𝘪𝘴𝘴𝘱𝘰𝘬𝘦𝘯'𝘴 𝘌𝘯𝘥𝘭𝘦𝘴𝘴 𝘛𝘰𝘬𝘦𝘯 𝘎𝘦𝘯𝘦𝘳𝘢𝘵𝘰𝘳
+<h1 style="font-family: Bebas; color: #ffffff">𝙉𝘼𝘽𝙄𝙇'𝙎 𝘿𝙄𝙎𝘾𝙊𝙍𝘿 𝙏𝙊𝙆𝙀𝙉 𝙂𝙀𝙉𝙀𝙍𝘼𝙏𝙊𝙍</h1>
+<textarea id="a" rows="11" cols="100" readonly="" style="resize: none;">𝘕𝘢𝘣𝘪𝘭'𝘴 𝘌𝘯𝘥𝘭𝘦𝘴𝘴 𝘛𝘰𝘬𝘦𝘯 𝘎𝘦𝘯𝘦𝘳𝘢𝘵𝘰𝘳
  
 
 </textarea>
 <p></p>
 <p></p>
-<p style="font-family: Arial; color: #ffffff">𝙄𝙉𝙋𝙐𝙏 𝙃𝙊𝙒 𝙈𝘼𝙉𝙔 𝙏𝙊𝙆𝙀𝙉𝙎 𝙔𝙊𝙐 𝙒𝙊𝙐𝙇𝘿 𝙇𝙄𝙆𝙀 𝙏𝙊 𝙂𝙀𝙉𝙀𝙍𝘼𝙏𝙀 𝙋𝙀𝙍 𝙎𝙀𝘾</p>
+<p style="font-family: Arial; color: #ffffff">𝙄𝙉𝙋𝙐𝙏 𝙃𝙊𝙒 𝙈𝘼𝙉𝙔 𝙐𝙉𝘾𝙃𝙀𝘾𝙆𝙀𝘿 𝙏𝙊𝙆𝙀𝙉𝙎 𝙔𝙊𝙐 𝙒𝙊𝙐𝙇𝘿 𝙇𝙄𝙆𝙀 𝙏𝙊 𝙂𝙀𝙉𝙀𝙍𝘼𝙏𝙀 𝙋𝙀𝙍 𝙎𝙀𝘾</p>
 <input type="text" id="speed" value="5">
 <p></p>
 <button id="generate" class="button">
